# pediatric_cancer_atlas_analysis

./: .gitignore  LICENSE  README.md  config.py  config.yml  config.yml.template
0.data_analysis_and_processing/: 0.extract_parse_image_metadata.ipynb  1.merge_metadata_and_select_samples.ipynb  2.prepare_data_for_model_training.ipynb  README.md  patch_env.yml
0.data_analysis_and_processing/metadata/: channel_mappings.csv
0.data_preprocessing/: 0.1.filter_low_quality_sites.ipynb  0.2.data_split.ipynb  README.md  preprocessing.sh
0.data_preprocessing/data_split_loaddata/: loaddata_heldout.csv  loaddata_train.csv
0.data_preprocessing/nbconverted/: 0.1.filter_low_quality_sites.py  0.2.data_split.py
1.exploratory_data_analysis/: pyproject.toml  requirements.txt  round1_eda.ipynb  round2_eda.ipynb
1.exploratory_data_analysis/nbconverted/: round1_eda.py  round2_eda.py
1.exploratory_data_analysis/static_UMAP_analysis/: 0.UMAP_embeddings.ipynb  README.md
1.exploratory_data_analysis/static_UMAP_analysis/nbconverted/: 0.UMAP_embeddings.py
1.test_vision_models/: ImageDatasetMultiChannel.py  ImageMetaDataset.py  ImageMetaDatasetMultiChannel.py  README.md
2.metrics_ablation_analysis/: 2.1.generate_ablations.py  README.md  pyproject.toml
2.metrics_ablation_analysis/src/image_ablation_analysis/: ablation_runner.py  indexing.py  sweeps.py  utils.py
2.metrics_ablation_analysis/src/image_ablation_analysis/hooks/: albumentations.py  generic_hook.py
2.metrics_ablation_analysis/src/image_ablation_analysis/transforms/: dilate.py  erode.py
env/: plotting_env.yml  training_env.yml
utils/: patch_generation.py
(+561 files in other folders)
