[project]
name = "eda-pediatric-cancer-atlas"
version = "0.1.0"
description = "Exploratory Data Analysis for the pediatric cancer atlas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
eda-pediatric-cancer-atlas = "eda_pediatric_cancer_atlas:main"

[build-system]
requires = ["uv"]
build-backend = "uv.backend"
