[project]
name = "eda-pediatric-cancer-atlas"
version = "0.1.0"
description = "Exploratory Data Analysis for the pediatric cancer atlas"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "pandas>=2.3.1",
    "pathlib2>=2.3.7.post1",
    "plotly>=6.2.0",
    "pyarrow>=20.0.0",
    "pynvim>=0.5.2",
    "umap-learn>=0.5.9.post2",
    "seaborn>=0.12.2",
]
