[project]
name = "image-ablation-analysis"
version = "0.1.0"
description = "Metrics analysis using ablated medical images"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "imagecodecs",
    "cv2",
    "torch",
    "seaborn",
    "matplotlib",
    "jupyter",
    "pre-commit",
    "numpy",
    "scikit-learn",
    "opencv-python",
    "ipython",
    "notebook",
    "albumentations",
    "pyarrow"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
